--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
   <article class="post">
     <header>
       <div class="post_image">
-        <img src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} style="border: none; height: 100%; width: 100%;" alt="{{page.title}}">
+        <img src={{ "/assets/img/" | prepend: site.baseurl | append : page.img}} style="border: none;max-width:auto;height: 100%; " alt="{{page.title}}">
       </div>
       <div class="post_description">
         <p class="post_meta">{{page.date | date: '%Y, %b %d'}}</p>
